# llm-data-processing

./: .env.example  .gitignore  EMPTY_RESPONSE_FIX.md  README.md  UBUNTU_SETUP.md  pyproject.toml  quickstart.ps1  quickstart.sh  requirements.txt  setup_directories.py  test_json_parsing.py  test_ollama_connection.py  test_ollama_performance.py  test_tag_validation.py  verify_chunks.py
config/: app.config.yaml
config/prompts/: sft_system.txt  sft_user.jinja  sft_verifier_system.txt  sft_verifier_user.jinja
schemas/: chunk.schema.json  generated_item.schema.json  shard_manifest.schema.json  verify_report.schema.json
src/: __init__.py  script1_chunk_md.py  script2_generate_verify.py  script3_pack_json.py
src/common/: __init__.py  config.py  hashing.py  ids.py  io_utils.py  json_utils.py  model_client.py  prompt_utils.py  tokenizers.py  validation.py
